# python-read-files-api

./: Makefile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: f2ee47ddce79_initial_revision.py
app/domain/models/: models.py
app/domain/usecases/: __init__.py  create_user_usecase.py  read_file_usecase.py  usecase.py  user_login_usecase.py
app/dto/: __init__.py  create_user_dto.py  file_import_dto.py  user_login_dto.py
app/exceptions/: exceptions.py
app/infra/: database.py
app/infra/repositories/: user_repository.py
app/main/: adapter.py  auth.py  main.py
app/main/factories/: __init__.py  import_factories.py  user_factories.py
app/main/routes/: __init__.py  import_routes.py  user_routes.py
app/schemas/: __init__.py  file_import_schemas.py  user_schemas.py
app/services/helpers/: helpers.py
app/services/strategies/: __init__.py  csv_strategy.py  html_strategy.py  xls_strategy.py
app/services/usecases/: __init__.py  create_user_usecase.py  read_file_usecase.py  user_login_usecase.py
docker/: Dockerfile  docker-compose.yaml  entrypoint.sh  requirements.txt
tests/services/helpers/: helpers_test.py
tests/services/usecases/: create_user_usecase_test.py  user_login_usecase_test.py
